--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,10 +8,6 @@
   font-family: 'Share Tech', sans-serif;
 }
 
-.imagen-background {
-  //background-image: url("img/imagem.jpg");
-}
-
 .imagen-carrousel {
   object-fit: cover;
   object-position: 0 50%;
@@ -19,5 +15,7 @@
 }
 
 .imagen-portifolio {
-  //width: 100vh;
+  /*
+  width: 100vh;
+  */
 }
